# Lexiconia

./: CMakeLists.txt  LICENSE  README.md  _README.md  build.sh  gitcheck.sh  gitupdate.bat  gitupdate.sh  test_glm.sh
Assets/: card_details.csv  card_details_youdao.csv  detail_repository copy.csv  detail_repository.csv  my_review.csv  path_graph.csv  word_repository.csv
Assets/output/: review_content.txt
Assets/review_files/: collocation.csv  daily_words.txt  expression_optimization.csv  sentence_pattern.csv
LexiconiaApp/: CMakeLists.txt  _main copy.cpp  _main.cpp  app  test_glm.cpp
LexiconiaApp/app.dSYM/Contents/Resources/DWARF/: app
LexiconiaApp/app.dSYM/Contents/Resources/Relocations/aarch64/: app.yml
LexiconiaApp/assets/shader/: basic.vert
LexiconiaApp/include/GLFW/: glfw3.h
LexiconiaApp/include/Graphics/: Camera.hpp  Shader.hpp
LexiconiaApp/include/glad/: glad.h
LexiconiaApp/src/: _main.cpp  glad.c  glad.cpp
LexiconiaApp/src/Graphics/: Camera.cpp  Shader.cpp
LexiconiaWeb/: _app.py  _main.py  _main_banished.py  clips.txt
LexiconiaWeb/models/: __init__.py  card_details_manager.py  crawler_main.py  detail_repository_manager.py  my_review_manager.py  path_graph_manager.py  repo_forms.py  word_repository_manager.py
LexiconiaWeb/services/: __init__.py  lexiconia_service.py  z_test.py
LexiconiaWeb/static/: preparereview.js
LexiconiaWeb/static/css/: _guidepage.css  addcard.css  addmyreview.css  dailyreview.css  lexiconia.css  pathbuilder.css  preparereview.css  style.css
LexiconiaWeb/static/js/: addmyreview.js  addwords.js  dailyreview.js  lexiconia.js  pathbuilder.js  preparereview.js
LexiconiaWeb/templates/: addcard.html  addmyreview.html  addwords.html  dailyreview.html  lexiconia.html  pathbuilder.html  preparereview.html  z_template.html
OxfordDictProcessor/: processor.py  test.html  test2.html
WrodsProecess/: crawlertest.py  tieba.txt  word_info.txt
WrodsProecess/Assets/: CEFRWordList_phrace.csv  CEFRWordList_r.csv  CEFRWordList_w copy.csv  CEFRWordList_w.csv  CEFRWordList_word.csv  CardDetails.csv  CardDetails2.csv  MyPhraces_.csv  MyWords.csv  MyWords_.csv  Root.csv  ToReview.csv  WordList_w.csv  WordRepository.csv  Words.txt  all_words.txt  my_review2.csv
WrodsProecess/LexiconiaApp/: _app.py  _main.py  app.py
WrodsProecess/LexiconiaApp/data/: CardDetails.csv  WordRepository.csv  card_details.csv  card_details_youdao.csv  card_details_youdao_test.csv  my_review.csv  my_review_copy.csv  my_words.csv  word_repository.csv
WrodsProecess/LexiconiaApp/models/: __init__.py  card_details_manager.py  crawler.py  crawler_main.py  flashcard_system.py  my_review_manager.py  word_repository_manager.py  word_to_review_manager.py
WrodsProecess/LexiconiaApp/services/: __init__.py  flashcard_service.py
WrodsProecess/LexiconiaApp/static/: addmyreview.js  addwords.js  dailyreview copy.js  dailyreview.js  lexiconia.js  preparereview.js  script.js  style.css
WrodsProecess/LexiconiaApp/templates/: Lexiconia.html  _guidepage.html  addcard.html  addmywords.html  dailyreview.html  preparereview.html
WrodsProecess/LexiconiaAppCopy/: app.py
WrodsProecess/LexiconiaAppCopy/templates/: lexiconia.html
WrodsProecess/PyFiles/: DailyWords.py  DouBanMovieCrawler.py  Processer.py  WordListProcesser.py  _main.py  crawler.py  flash.py
WrodsProecess/TestApp-FlashCard/: app.py
WrodsProecess/TestApp-FlashCard/data/: CardDetails.csv
WrodsProecess/TestApp-FlashCard/static/: script.js  style.css
WrodsProecess/TestApp-FlashCard/templates/: index.html
WrodsProecess/TestApp-register/: app.py
WrodsProecess/TestApp-register/static/: script.js  style.css
WrodsProecess/TestApp-register/templates/: register.html
WrodsProecess/TestApp-word/: app.py
WrodsProecess/TestApp-word/static/: word_script.js  word_style.css
WrodsProecess/TestApp-word/templates/: word.html
WrodsProecess/WordList/: A1.txt  A2.txt  B1.txt  B2.txt  C1.txt  C2.txt  pre-dis.txt  pre-il.txt  pre-im.txt  pre-in.txt  pre-inter.txt  pre-ir.txt  pre-mis.txt  pre-re.txt  pre-un.txt  suf-able.txt  suf-al.txt  suf-ance.txt  suf-ant.txt
assets/inout/: detail_repository.csv
tempfiles/OxfordDictProcessor/: processor.py  word_grand_info.json
tempfiles/review_files/: grammar.csv  proper_noun.csv  recording.csv  rewriting.csv  vocabularies.csv
web/: _app.py  _main.py
web/models/: __init__.py  formatting.py  manager_detail_repository.py  manager_word_repository.py  remaping.py  tool_crawler.py
web/services/: __init__.py  lexiconia_service.py
web/static/js/: _guidepage.js
web/templates/: _guidepage.html
